--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
   "dependencies": {
     "expo": "~36.0.0",
     "react": "~16.9.0",
+    "react-devtools": "^3.6.3",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-animatable": "1.2.4",
     "react-native-datepicker": "1.7.2",
     "react-native-elements": "^1.0.0-beta8",
-    "react-native-ratings": "^7.2.0",
     "react-native-swipeout": "2.3.3",
     "react-native-web": "~0.11.7",
     "react-navigation": "2.0.1",
     "react-redux": "5.0.7",
     "redux": "4.0.0",
     "redux-logger": "3.0.6",
+    "redux-persist": "5.9.1",
     "redux-thunk": "2.2.0"
   },
   "devDependencies": {
